--- a/ticket/ticket.vcxproj
+++ b/ticket/ticket.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{393195de-fdfa-4055-9b7e-a1e982bce97e}</ProjectGuid>
     <RootNamespace>ticket</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>cinema managment</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
