--- a/ticket/ticket.vcxproj
+++ b/ticket/ticket.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="alltickets.h" />
     <ClInclude Include="cinema.h" />
     <ClInclude Include="Film2.h" />
+    <ClInclude Include="IdGenerator.h" />
     <ClInclude Include="ticket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
