--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-name: test
+name: test five
 #3
 on:
-  push:
-  release:
-    types: published
+  workflow_dispatch:
 
 jobs:
 
@@ -12,19 +10,20 @@ jobs:
     steps:
 
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: use this action, with existing test results
         id: loc
-        uses: PavanMudigonda/lines-of-code-reporter@v1.5
+        uses: PavanMudigonda/lines-of-code-reporter@v1.4
         with:
-          directory: ./
-          skip_check_run: false
-          exclude_lang: "JSON"
-          exclude_dir: ".github"
+          exclude_lang: "YAML,TXT"
           
       - name: print output
         shell: pwsh
         run: | 
-          Write-Host 'Total Lines of Code...:  ${{ steps.lines-of-code-reporter.outputs.total_lines }}'
-          Write-Host 'Lines of Code Markdown Report Path...:  ${{ steps.lines-of-code-reporter.outputs.loc_report }}'
+          Write-Host 'Total Lines of Code...:  ${{ steps.loc.outputs.total_lines }}'
+          Write-Host 'Lines of Code Markdown Report Path...:  ${{ steps.loc.outputs.loc_report }}'
+          
+      # Publish Lines of Code Summary  # Optional
+      - name: Add Lines of Code Summary
+        run: echo "${{ steps.loc.outputs.lines-of-code-summary }}" >> $GITHUB_STEP_SUMMARY
