--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-name: test five
+name: test
 #3
 on:
-  workflow_dispatch:
+  push:
+  release:
+    types: published
 
 jobs:
 
@@ -10,20 +12,24 @@ jobs:
     steps:
 
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: use this action, with existing test results
         id: loc
-        uses: PavanMudigonda/lines-of-code-reporter@v1.4
+        uses: PavanMudigonda/lines-of-code-reporter@v1.5
         with:
-          exclude_lang: "YAML,TXT"
+          directory: ./ticket/
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_check_run: false
+          exclude_lang: "JSON"
+          exclude_dir: ".github"
           
       - name: print output
         shell: pwsh
         run: | 
-          Write-Host 'Total Lines of Code...:  ${{ steps.loc.outputs.total_lines }}'
-          Write-Host 'Lines of Code Markdown Report Path...:  ${{ steps.loc.outputs.loc_report }}'
-          
+          Write-Host 'Total Lines of Code...:  ${{ steps.lines-of-code-reporter.outputs.total_lines }}'
+          Write-Host 'Lines of Code Markdown Report Path...:  ${{ steps.lines-of-code-reporter.outputs.loc_report }}'
+
       # Publish Lines of Code Summary  # Optional
       - name: Add Lines of Code Summary
         run: echo "${{ steps.loc.outputs.lines-of-code-summary }}" >> $GITHUB_STEP_SUMMARY
